--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -2,11 +2,12 @@
 <resources>
     <string name="app_name">iCare</string>
 
-    <string name="wifi_setting">綁定Wifi</string>
+    <string name="no_function">功能尚未開放.</string>
+
     <string name="device_setting">綁定設備</string>
     <string name="regulate_distance">校正距離</string>
     <string name="logout">登出</string>
-    <string name="login">登入</string>
+
     <string name="register">註冊</string>
     <string name="enter_account">請輸入帳號</string>
     <string name="enter_password">請輸入密碼</string>
@@ -84,8 +85,7 @@
     <string name="register_to_login">註冊</string>
     <string name="account">帳號</string>
     <string name="password">密碼</string>
-    <string name="account_hint">英數組合，6 – 32 字元 </string>
-    <string name="password_hint">英數組合，6 – 32 字元 </string>
+
     <string name="confirm_pwd_register">確認密碼</string>
     <string name="email">電子信箱</string>
     <string name="next_step">下一步</string>
@@ -211,10 +211,7 @@
     <string name="warning">注意</string>
     <string name="yes">是</string>
     <string name="no">否</string>
-    <string name="ask_permission_again_title">取得權限失敗</string>
-    <string name="ask_permission_again_message">請允許權限，以便App功能正常運作</string>
-    <string name="ask_background_location_permission_again_title">請允許背景位置權限</string>
-    <string name="ask_background_location_permission_again_message">請至應用程式設定修改位置權限，使用App時必須一律允許位置權限，以便背景執行中觸發緊急鈕時能夠取得現在位置。\n\n注意！\n即使應用程式已關閉或未使用，仍然會收集位置數據用於緊急鈕即時位置上傳功能。</string>
+
     <string name="ok">好</string>
     <string name="close">關閉</string>
     <string name="please_login_again">請重新登入</string>
@@ -237,7 +234,7 @@
     <string name="try_again">請再按一次</string>
     <string name="error_connect_device_state">目前尚未連接設備,正在嘗試自動連接....</string>
     <string name="heart_rate_unit">bpm</string>
-    <string name="breath_state_unit">brpm</string>
+    <string name="breath_state_unit">cpm</string>
     <string name="radar_status_unbind_text">未綁定</string>
     <string name="lying_lie">正躺</string>
     <string name="lie_down">側躺</string>
@@ -255,7 +252,7 @@
     <string name="error_wifi_special_symbols">wifi帳號或密碼不能有特殊符號(ex:”或,等)</string>
     <string name="error_wifi_acc_pass_incorrect">連接wifi失敗,名稱或密碼錯誤</string>
 
-    <string name="error_login_acc_pass_incorrect">帳號或密碼錯誤</string>
+
 
     <string name="unknown_error_occurred">未知錯誤</string>
     <string name="body_temperature">體溫</string>
@@ -266,7 +263,7 @@
     <string name="device_failure">裝置故障。</string>
     <string name="drawer_set_up">功能設定</string>
 
-    <string name="exception_notification">異常通知</string>
+
     <string name="not_open_wifi">確保您的 WiFi 已打開。</string>
     <string name="no_supports_check_wifi">該功能僅支持Android 10或更高版本的設備。</string>
     <string name="no_open_bluetooth">請確認已開啟藍牙。</string>
@@ -276,4 +273,14 @@
     <string name="calibration_success">校準成功。</string>
     <string name="calibration_failed">校準失敗。</string>
 
+    <string name="ask_permission_again_title">取得權限失敗</string>
+    <string name="ask_permission_again_message">請允許權限，以便App功能正常運作</string>
+    <string name="account_hint">英數組合，6 – 32 字元 </string>
+    <string name="password_hint">英數組合，6 – 32 字元 </string>
+    <string name="error_login_acc_pass_incorrect">帳號或密碼錯誤</string>
+    <string name="login">登入</string>
+
+    <string name="wifi_setting">綁定Wifi</string>
+    <string name="exception_notification">異常通知</string>
+    <string name="response_unauthenticated">請求身份驗證憑據憑證失敗，請重新登入。</string>
 </resources>
